<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.DetayFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/ceiling_arc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/favorite"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintBottom_toBottomOf="@+id/yemekResimDetay"
                app:layout_constraintEnd_toEndOf="parent"
                app:lottie_fileName="favorite.json" />

            <ImageView
                android:id="@+id/backbutton"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/backbutton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/yemekResimDetay"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="200dp"
                android:src="@drawable/anayemekyeni"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bilgiler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/yemekResimDetay">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/sure"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="delivery.json"
                    app:lottie_loop="true" />

                <TextView
                    android:id="@+id/sure"
                    style="@style/kart_tasarim2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-8dp"
                    android:layout_marginTop="6dp"
                    android:text="25-35 dk."
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/lottieAnimationView"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/yemekTuru"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="yemekturu.json"
                    app:lottie_loop="true" />

                <TextView
                    android:id="@+id/yemekTuru"
                    style="@style/kart_tasarim2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="16dp"
                    android:paddingLeft="8dp"
                    android:text="25-35 dk."
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView2"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/lottieAnimationView3"
                    app:layout_constraintStart_toEndOf="@+id/sure"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="false"
                    app:lottie_fileName="rating.json"
                    app:lottie_loop="false" />

                <TextView
                    android:id="@+id/puan"
                    style="@style/kart_tasarim2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="4.4"
                    android:textSize="28dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lottieAnimationView2"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/yemekIsimDetay"
                style="@style/kart_tasarim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="TextView"
                android:textSize="45dp"
                app:layout_constraintBottom_toTopOf="@id/yemekResimDetay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/itemFiyatDetay"
                style="@style/kart_tasarim2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:text="TextView"
                android:textSize="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bilgiler" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/detayButtonArtir"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/bar2"
                android:fontFamily="@font/dekko"
                android:gravity="center"
                android:text="+"
                android:textColor="@color/white"
                android:textSize="28dp"
                app:layout_constraintBottom_toBottomOf="@id/itemFiyatDetay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/itemFiyatDetay" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/detayButtonAzalt"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bar2"
                android:fontFamily="@font/dekko"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="28dp"
                app:layout_constraintBottom_toBottomOf="@id/itemFiyatDetay"
                app:layout_constraintEnd_toStartOf="@id/miktar"
                app:layout_constraintTop_toTopOf="@+id/itemFiyatDetay" />

            <TextView
                android:id="@+id/miktar"
                style="@style/kart_tasarim2"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="00"
                android:textSize="40dp"
                app:layout_constraintBottom_toBottomOf="@id/itemFiyatDetay"
                app:layout_constraintEnd_toStartOf="@+id/detayButtonArtir"
                app:layout_constraintTop_toTopOf="@id/itemFiyatDetay" />



            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/headphones"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/kart_tasarim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/siparisVerin"
                android:textColor="@color/white"
                android:textSize="25dp"
                app:layout_constraintEnd_toStartOf="@+id/imageView4"
                app:layout_constraintStart_toEndOf="@+id/backbutton"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/yanindaIyiGiderRV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="96dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yanindaIyiGider" />

            <TextView
                android:id="@+id/yanindaIyiGider"
                style="@style/kart_tasarim2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/yanindaIyiGider"
                android:textSize="26dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemFiyatDetay" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sepeteEkleDetay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bar"
        android:fontFamily="@font/dekko"
        android:gravity="center"
        android:paddingHorizontal="32dp"
        android:text="@string/sepeteEkle"
        android:textColor="@color/white"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/sepeteEkleDetay"
        app:layout_constraintEnd_toEndOf="@id/sepeteEkleDetay"
        app:layout_constraintStart_toStartOf="@id/sepeteEkleDetay"
        app:layout_constraintTop_toTopOf="@id/sepeteEkleDetay"
        app:lottie_fileName="verify.json" />

</androidx.constraintlayout.widget.ConstraintLayout>